crates/cifmt/src/tool/snapshots/cifmt__tool__cargo_libtest__tests__format_github@bench.snap
---
source: crates/cifmt/src/tool/cargo_libtest.rs
expression: formatted
---
::notice title=Benchmark Result::bench_example: 1234 ns/iter (± 56)
