crates/cifmt/src/tool/snapshots/cifmt__tool__cargo_libtest__tests__format_github@report.snap
---
source: crates/cifmt/src/tool/cargo_libtest.rs
expression: formatted
---
::notice title=Doctest Report::Total: 10.50s, Compilation: 8.20s
