crates/cifmt/src/tool/snapshots/cifmt__tool__cargo_libtest__tests__format_github@suite_completed.snap
---
source: crates/cifmt/src/tool/cargo_libtest.rs
expression: formatted
---
::endgroup::
::notice title=Test Discovery::Discovered 47 items: 42 tests, 5 benchmarks, 3 ignored
