crates/cifmt/src/tool/snapshots/cifmt__tool__cargo_libtest__tests__format_github@suite_failed.snap
---
source: crates/cifmt/src/tool/cargo_libtest.rs
expression: formatted
---
::error title=Test Suite Failed::2 failed, 38 passed, 2 ignored, 0 measured, 5 filtered out in 1.57s
