crates/cifmt/src/tool/snapshots/cifmt__tool__cargo_libtest__tests__format_github@suite_started.snap
---
source: crates/cifmt/src/tool/cargo_libtest.rs
expression: formatted
---
::notice title=Test Suite Started::Running 42 tests
