crates/cifmt/src/tool/snapshots/cifmt__tool__cargo_libtest__tests__format_github@test_discovered.snap
---
source: crates/cifmt/src/tool/cargo_libtest.rs
expression: formatted
---
::debug::Discovered test: test_example (ignored: false, message: None, location: src/lib.rs:10:4-15:5)
