crates/cifmt/src/tool/snapshots/cifmt__tool__cargo_libtest__tests__format_github@test_failed.snap
---
source: crates/cifmt/src/tool/cargo_libtest.rs
expression: formatted
---
::endgroup::
::notice title=Test Failed: test_failing (executed in 0.00s)::assertion failed
