crates/cifmt/src/tool/snapshots/cifmt__tool__cargo_libtest__tests__format_github@test_ignored.snap
---
source: crates/cifmt/src/tool/cargo_libtest.rs
expression: formatted
---
::notice title=Test Ignored: test_ignored::
