crates/cifmt/src/tool/snapshots/cifmt__tool__cargo_libtest__tests__format_github@test_ok.snap
---
source: crates/cifmt/src/tool/cargo_libtest.rs
expression: formatted
---
::notice title=Test Passed: test_example::Executed in 0.00s
::endgroup::
