crates/cifmt/src/tool/snapshots/cifmt__tool__cargo_libtest__tests__format_github@test_started.snap
---
source: crates/cifmt/src/tool/cargo_libtest.rs
expression: formatted
---
::group::Test: test_example
